[gd_scene load_steps=6 format=2]

[ext_resource path="res://bg.png" type="Texture" id=1]
[ext_resource path="res://Font_32px.tres" type="DynamicFont" id=2]
[ext_resource path="res://Graph.gd" type="Script" id=3]
[ext_resource path="res://Font_16px.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.054902, 0.0588235, 1 )

[node name="Main" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -169.0
margin_right = 640.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 144 )
custom_styles/panel = SubResource( 1 )

[node name="Input_a" type="LineEdit" parent="CanvasLayer/Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = -132.0
margin_right = 277.0
margin_bottom = -68.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "a"
caret_blink = true

[node name="Input_b" type="LineEdit" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -337.0
margin_top = -132.0
margin_right = -99.0
margin_bottom = -68.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "b"
caret_blink = true

[node name="Input_c" type="LineEdit" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -73.0
margin_top = -132.0
margin_right = 165.0
margin_bottom = -68.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "c"
caret_blink = true

[node name="Solve_btn" type="Button" parent="CanvasLayer/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -448.0
margin_top = -132.0
margin_right = -298.0
margin_bottom = -68.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 2 )
text = "SOLVE"

[node name="Output" type="Label" parent="CanvasLayer/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -271.0
margin_top = -132.0
margin_right = -24.0
margin_bottom = -36.0
rect_min_size = Vector2( 0, 96 )
custom_fonts/font = ExtResource( 2 )
text = "X1: 24; X2: 2"
align = 1
valign = 1
autowrap = true

[node name="ResolutionSlider" type="HSlider" parent="CanvasLayer/Panel"]
margin_left = 159.0
margin_top = 120.0
margin_right = 982.0
margin_bottom = 149.0
min_value = 0.001
max_value = 5.0
step = 0.01
value = 0.5

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
margin_left = 39.0
margin_top = 120.0
margin_right = 149.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 4 )
text = "RESOLUTION:"

[node name="Graph" type="Sprite" parent="."]
position = Vector2( 640, 275 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Line" type="Line2D" parent="Graph"]
width = 2.0

[connection signal="pressed" from="CanvasLayer/Panel/Solve_btn" to="Graph" method="_on_Solve_btn_pressed"]
[connection signal="value_changed" from="CanvasLayer/Panel/ResolutionSlider" to="Graph" method="_on_ResolutionSlider_value_changed"]
